--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -5,9 +5,10 @@
     <div class="section-content-wide">
       <div class="section-gap">
 
+
         <div class="card-grid">
-          {% for i in ""|ljust:"9" %}
-            {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
+          {% for post in page_obj %}
+            {% include 'blog/partials/_post-card.html'  %}
           {% endfor %}
         </div>
 
