--- a/djangoapp/blog/static/blog/css/style.css
+++ b/djangoapp/blog/static/blog/css/style.css
@@ -27,7 +27,7 @@
   /* Font-family */
   --ff-regular: Georgia, 'Times New Roman', Times, serif;
   --ff-headings: Georgia, 'Times New Roman', Times, serif;
-  --ff-mono: 'Courier New', Courier, monospace;
+  --ff-mono:  monospace;
 
   /* Font-Sizes */
   /* https://royalfig.github.io/fluid-typography-calculator/ */
@@ -141,7 +141,7 @@ pre {
   max-width: 100%;
   overflow-x: auto;
   line-height: var(--lh-mono);
-  font-size: var(--fs-sm);
+  font-size: var(--fs-smlr);
 }
 
 pre,
@@ -161,6 +161,15 @@ body,
 html,
 .blog-wrapper {
   height: 100%;
+}
+
+img {
+  margin: 0 auto;
+}
+
+.CodeMirror pre {
+  height: auto !important;
+  font-size: var(--fs-smlr) !important;
 }
 
 .blog-wrapper {
@@ -191,6 +200,10 @@ html,
 }
 
 /* Utilities */
+.mt-base {
+  margin-top: var(--spacing-base);
+}
+
 .pb-base {
   padding-bottom: var(--spacing-base);
 }
