--- a/djangoapp/blog/templates/blog/partials/_base.html
+++ b/djangoapp/blog/templates/blog/partials/_base.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   {% include 'blog/partials/_head.html' %}
+  {% block additional_head %}{% endblock additional_head %}
 </head>
 <body>
   <div class="blog-wrapper">
@@ -9,7 +10,7 @@
       {% include 'blog/partials/_header.html' %}
     {% endif %}
 
-    {% block content %}{% endblock content %}
+    {% block content %} {% endblock content %}
     
     {% if site_setup.show_pagination %}
       {% include 'blog/partials/_pagination.html' %}
