--- a/djangoapp/blog/static/blog/css/style.css
+++ b/djangoapp/blog/static/blog/css/style.css
@@ -167,6 +167,10 @@ img {
   margin: 0 auto;
 }
 
+.center {
+  margin: 0 auto;
+}
+
 .CodeMirror pre {
   height: auto !important;
   font-size: var(--fs-smlr) !important;
